--- a/public/css/chatty.css
+++ b/public/css/chatty.css
@@ -1,7 +1,12 @@
 * {
-  font: normal 1em verdana, sans-serif;
   margin: 0;
   padding: 0;
+}
+
+body {
+  font: normal 0.75em Tahoma, Geneva, sans-serif;;
+  margin: 0 auto;
+  width: 48em;
 }
 
 section#chat {
@@ -11,11 +16,12 @@ section#chat {
   background: #e9e9e9;
   border: solid 1px #b3b3b3;
   border-radius: 0.5em;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, .25), 0 1px 0 rgba(255, 255, 255, 0.25);
 }
 
 section#chat section#content {
-  height: 20em;
-  width: 30em;
+  height: 32em;
+  width: 32em;
   padding: 0.25em;
   margin-right: 0.25em;
   margin-bottom: 0.25em;
@@ -24,9 +30,21 @@ section#chat section#content {
 }
 
 section#chat aside {
+  width: 13em;
   padding: 0.25em;
   float: right;
 } 
+section#chat aside header h2{
+  font-size: 1.25em;
+  color: #325e2a;
+}
+
+section#chat aside article.user {
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  font-style: italic;
+  color: #00935f;
+}
 
 section#chat footer {
   position: relative;
