--- a/public/css/chatty.css
+++ b/public/css/chatty.css
@@ -13,10 +13,18 @@ section#chat {
   color: #777;
   margin: 0.5em;
   padding: 0.25em;
-  background: #e9e9e9;
   border: solid 1px #b3b3b3;
-  border-radius: 0.5em;
+  border-radius: 0.5em; 
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, .25), 0 1px 0 rgba(255, 255, 255, 0.25);
+  
+  background: #e9e9e9;
+  background: -moz-linear-gradient(top, rgba(238,238,238,1) 0%, rgba(204,204,204,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(238,238,238,1)), color-stop(100%,rgba(204,204,204,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* IE10+ */
+  background: linear-gradient(top, rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
 }
 
 section#chat section#content {
@@ -31,19 +39,26 @@ section#chat section#content {
 
 section#chat aside {
   width: 13em;
+  height: 32em;
+  margin-top: 0.25em;
+  margin-right: 0.25em;
   padding: 0.25em;
+  background: rgba(255,255,255,0.1);
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, .25), 0 1px 0 rgba(255, 255, 255, 0.25);
   float: right;
+  border-radius: 0.5em;
+  overflow: hidden;
 } 
 section#chat aside header h2{
+  padding-left: 0.25em;
   font-size: 1.25em;
-  color: #325e2a;
+  text-align: center;
+  text-shadow: rgba(255, 255, 255, 0.5) 1px 1px 0;
+  color: #666;
 }
 
 section#chat aside article.user {
-  padding-top: 0.5em;
-  padding-bottom: 0.5em;
-  font-style: italic;
-  color: #00935f;
+  padding: 0.25em; 
 }
 
 section#chat footer {
@@ -64,7 +79,7 @@ article.chat {
 }
 
 article.chat:nth-child(odd) {
-  background: rgba(0,0,255,0.1);
+  background: rgba(54,164,255,0.1);
 }
 
 article.chat:nth-child(even) {
