--- a/public/css/chatty.css
+++ b/public/css/chatty.css
@@ -42,8 +42,9 @@ section#chat aside {
   height: 32em;
   margin-top: 0.25em;
   margin-right: 0.25em;
+  margin-left: 0;
   padding: 0.25em;
-  background: rgba(255,255,255,0.1);
+  background: rgba(222,222,222,0.1);
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, .25), 0 1px 0 rgba(255, 255, 255, 0.25);
   float: right;
   border-radius: 0.5em;
@@ -59,12 +60,14 @@ section#chat aside header h2{
 
 section#chat aside article.user {
   padding: 0.25em; 
+  color: #999;
 }
 
 section#chat footer {
   position: relative;
   bottom: 0;
   padding: 0.25em;
+  padding-left: 0.5em;
 }
 
 section#chat footer input {
@@ -74,6 +77,7 @@ section#chat footer input {
 }
 
 article.chat {
+  margin-right: 0.25em;
   padding: 0.5em;
   border-radius: 0.5em;
 }
