--- a/public/css/chatty.css
+++ b/public/css/chatty.css
@@ -71,9 +71,18 @@ section#chat footer {
 }
 
 section#chat footer input {
-  border-radius: 0.5em;
+  border-radius: 1em;
   height: 1.5em;
   width: 50%;
+  padding-left: 0.5em;
+  background: #eee;
+  color: #333;
+}
+
+section#chat footer input:focus {
+  outline:none;
+  border-color:#80C7F2;
+  box-shadow:0 0 0.75em #80C7F2;
 }
 
 article.chat {
