--- a/public/css/chatty.css
+++ b/public/css/chatty.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  font: normal 0.75em Tahoma, Geneva, sans-serif;;
+  font: normal 0.75em Verdana, Tahoma, Helvetica, sans-serif;
   margin: 0 auto;
   width: 48em;
 }
@@ -52,7 +52,7 @@ section#chat aside {
 } 
 section#chat aside header h2{
   padding-left: 0.25em;
-  font-size: 1.25em;
+  font-size: 1em;
   text-align: center;
   text-shadow: rgba(255, 255, 255, 0.5) 1px 1px 0;
   color: #666;
@@ -100,7 +100,8 @@ article.chat:nth-child(even) {
 }
 
 article.chat header time {
-  font-size: 0.5em;
+  font: normal 0.75em Helvetica, sans-serif;
+  font-size: 0.75em;
   float: right;
 }
 
