--- a/public/css/chatty.css
+++ b/public/css/chatty.css
@@ -18,13 +18,21 @@ section#chat {
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, .25), 0 1px 0 rgba(255, 255, 255, 0.25);
   
   background: #e9e9e9;
-  background: -moz-linear-gradient(top, rgba(238,238,238,1) 0%, rgba(204,204,204,1) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(238,238,238,1)), color-stop(100%,rgba(204,204,204,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* IE10+ */
-  background: linear-gradient(top, rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%); /* W3C */
+  background: -moz-linear-gradient(top, rgba(228,228,228,1) 0%, rgba(194,194,194,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(228,228,228,1)), color-stop(100%,rgba(194,194,194,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(228,228,228,1) 0%,rgba(194,194,194,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(228,228,228,1) 0%,rgba(194,194,194,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(228,228,228,1) 0%,rgba(194,194,194,1) 100%); /* IE10+ */
+  background: linear-gradient(top, rgba(228,228,228,1) 0%,rgba(194,194,194,1) 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
+}
+
+.stripes {
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, color-stop(.5, rgba(255, 255, 255, .2)), color-stop(.5, transparent), to(transparent));
+  background-image: -moz-linear-gradient(rgba(255, 255, 255, .2) 50%, transparent 50%, transparent);
+  background-image: -o-linear-gradient(rgba(255, 255, 255, .2) 50%, transparent 50%, transparent);
+  background-image: linear-gradient(rgba(255, 255, 255, .2) 50%, transparent 50%, transparent);
+  background-size: 0.3em;
 }
 
 section#chat section#content {
@@ -92,11 +100,11 @@ article.chat {
 }
 
 article.chat:nth-child(odd) {
-  background: rgba(54,164,255,0.1);
+  background: rgba(228,228,238,0.8);
 }
 
 article.chat:nth-child(even) {
-  background: rgba(255,255,255,0.3);
+  background: rgba(214,214,224,0.8);
 }
 
 article.chat header time {
