--- a/public/css/chatty.css
+++ b/public/css/chatty.css
@@ -31,6 +31,7 @@ section#chat {
   background-image: -webkit-gradient(linear, 0 0, 0 100%, color-stop(.5, rgba(255, 255, 255, .2)), color-stop(.5, transparent), to(transparent));
   background-image: -moz-linear-gradient(rgba(255, 255, 255, .2) 50%, transparent 50%, transparent);
   background-image: -o-linear-gradient(rgba(255, 255, 255, .2) 50%, transparent 50%, transparent);
+  background-image: -ms-linear-gradient(rgba(255,255,255,.2) 50%, transparent 50%, transparent); 
   background-image: linear-gradient(rgba(255, 255, 255, .2) 50%, transparent 50%, transparent);
   background-size: 0.3em;
 }
